# ctxray

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .testmondata  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  action.yml  module.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  feedback.yml
.github/workflows/: ci.yml  publish.yml
docs/: demo.tape  launch-post.md  retention-features-spec.md  roadmap.md
docs/icons/: generate.sh
docs/launch/: blog-v1.6-privacy-audit.md  chinese-communities.md  demo.tape  devto-article.md  linkedin.md  reddit-posts.md  show-hn.md  twitter-thread.md  v1.6-juejin.md  v1.6-mcp-submissions.md  v1.6-reddit.md  v1.6-show-hn.md  v1.6-strategy.md  v1.6-twitter-thread.md
docs/superpowers/plans/: 2026-03-11-merge-view.md  2026-03-11-v0.7.0-digest.md  2026-03-11-v0.8.0-effectiveness.md  2026-03-23-distill.md  2026-03-25-v141-polish.md
docs/superpowers/specs/: 2026-03-11-html-dashboard-design.md  2026-03-11-merge-view-design.md  2026-03-11-prompt-templates-design.md  2026-03-22-prompt-compress-design.md  2026-03-23-distill-design.md  2026-03-23-v131-suggestions-source-design.md  2026-03-24-v14-context-recovery-design.md  2026-03-24-v141-polish-design.md  2026-03-28-v1.6-agent-intelligence-design.md
experiments/: README.md  RESULTS.md  aggregate.py  data.py  data_e10.py  run_e10_launcher.py  validate.py
experiments/contributed/: README.md  deepseek_r1_8b.json  example_gemma3_1b.json  gemma3_1b.json  gemma3_4b.json  gemma4_26b.json  llama3_1_8b.json  phi4_14b.json  phi4_mini_latest.json  qwen2_5_coder_1_5b.json  qwen3_5_27b.json  qwen3_5_35b_a3b.json  qwen3_5_4b.json  qwen3_5_9b.json
scripts/: gen_screenshots.py  generate_demo_data.py
scripts/launch/: hn_monitor.py  reddit_helper.py
src/ctxray/: __init__.py  cli.py  config.py  demo.py  mcp.py  mcp_main.py
src/ctxray/adapters/: aider.py  base.py  chatgpt.py  claude_chat.py  claude_code.py  cline.py  codex.py  cursor.py  filters.py  gemini.py  openclaw.py
src/ctxray/bridge/: handler.py  host.py  manifest.py  protocol.py
src/ctxray/commands/: telemetry.py  wrapped.py
src/ctxray/core/: __init__.py  agent.py  analyzer.py  build.py  check.py  compress.py  cost.py  dashboard.py  dedup.py  digest.py  distill.py  effectiveness.py  explain.py  extractors.py  extractors_zh.py  insights.py  lang_detect.py  lint.py  merge_view.py  models.py  patterns.py  persona.py  pipeline.py  privacy.py  privacy_scan.py  prompt_dna.py  recommend.py  repetition.py  rewrite.py  scorer.py  session_quality.py  session_type.py  style.py  suggestions.py  templates.py  tools_comparison.py  trends.py  wrapped.py
src/ctxray/embeddings/: __init__.py  local_embed.py  ollama.py  openai_embed.py  tfidf.py
src/ctxray/output/: __init__.py  agent_terminal.py  build_terminal.py  check_terminal.py  compress_terminal.py  dashboard_terminal.py  distill_terminal.py  explain_terminal.py  export.py  github_pr.py  html_report.py  markdown.py  patterns_terminal.py  projects_terminal.py  repetition_terminal.py  rewrite_terminal.py  sessions_terminal.py  terminal.py  tools_terminal.py  wrapped_html.py  wrapped_terminal.py
src/ctxray/sharing/: client.py  clipboard.py
src/ctxray/storage/: __init__.py  db.py
src/ctxray/telemetry/: collector.py  consent.py  events.py  prompt.py  sender.py
src/reprompt/: __init__.py  cli.py  config.py  demo.py  mcp.py  mcp_main.py
src/reprompt/adapters/: __init__.py  aider.py  base.py  chatgpt.py  claude_chat.py  claude_code.py  cline.py  codex.py  cursor.py  filters.py  gemini.py  openclaw.py
src/reprompt/bridge/: __init__.py  handler.py  host.py  manifest.py  protocol.py
src/reprompt/commands/: telemetry.py  wrapped.py
src/reprompt/core/: agent.py  analyzer.py  build.py  compress.py  conversation.py  cost.py  dashboard.py  dedup.py  digest.py  distill.py  effectiveness.py  explain.py  extractors.py  extractors_zh.py  insights.py  library.py  lint.py  merge_view.py  models.py  pipeline.py  privacy.py  privacy_scan.py  prompt_dna.py  recommend.py  repetition.py  rewrite.py  scorer.py  segmenter.py  session_meta.py  session_quality.py  session_type.py  style.py  suggestions.py  templates.py  timeutil.py  trends.py  wrapped.py
src/reprompt/embeddings/: __init__.py  base.py  local_embed.py  ollama.py  openai_embed.py  tfidf.py
src/reprompt/output/: __init__.py  agent_terminal.py  build_terminal.py  compress_terminal.py  dashboard_terminal.py  distill_terminal.py  explain_terminal.py  export.py  html_report.py  json_out.py  markdown.py  patterns_terminal.py  repetition_terminal.py  rewrite_terminal.py  sessions_terminal.py  terminal.py  wrapped_html.py  wrapped_terminal.py
src/reprompt/sharing/: client.py
src/reprompt/storage/: db.py
src/reprompt/telemetry/: __init__.py  collector.py  consent.py  events.py  prompt.py  queue.py
tests/: conftest.py  test_adapter_aider.py  test_adapter_chatgpt.py  test_adapter_claude.py  test_adapter_claude_chat.py  test_adapter_cline.py  test_adapter_gemini.py  test_adapter_openclaw.py  test_agent.py  test_agent_cli.py  test_analyzer.py  test_bridge_cli.py  test_bridge_e2e.py  test_bridge_handler.py  test_bridge_integration.py  test_bridge_manifest.py  test_bridge_protocol.py  test_build.py  test_build_cli.py  test_build_output.py  test_check.py  test_check_cli.py  test_cli.py  test_cli_deprecations.py  test_cli_library_effectiveness.py  test_clipboard.py  test_codex_adapter.py  test_compare_best_worst.py  test_compress.py  test_compress_cli.py  test_compress_dna.py  test_compress_html.py  test_compress_insights.py  test_config.py  test_conversation.py  test_copy_flag.py  test_cost.py  test_coverage_boost.py  test_cursor_adapter.py  test_dashboard.py  (+102 more)
tests/fixtures/: aider_chat_history.md  chatgpt_conversations.json  claude_chat_export.json  claude_session.jsonl  gemini_session.json  openclaw_session.jsonl
tests/fixtures/cline_task/: api_conversation_history.json
(+2 files in other folders)
