[project]
name = "reprompt-cli"
version = "0.7.3"
description = "Discover, analyze, and evolve your best prompts from AI coding sessions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["prompt", "llm", "ai", "cli", "analytics", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "scikit-learn>=1.4",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
ollama = ["requests>=2.31"]
local = ["sentence-transformers>=2.0"]
openai = ["openai>=1.0"]
mcp = ["fastmcp>=2.0"]
science = ["textstat>=0.7", "yake>=0.4", "spacy>=3.7"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.0", "pytest-cov>=5.0"]

[project.scripts]
reprompt = "reprompt.cli:app"

[project.urls]
Homepage = "https://github.com/reprompt-dev/reprompt"
Repository = "https://github.com/reprompt-dev/reprompt"
Issues = "https://github.com/reprompt-dev/reprompt/issues"
Changelog = "https://github.com/reprompt-dev/reprompt/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reprompt"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true
follow_imports = "silent"
