[project]
name = "ctxray"
version = "3.0.0"
description = "Context intelligence for AI coding sessions — see how you really use AI, locally"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["prompt", "llm", "ai", "cli", "analytics", "claude-code", "context-engineering", "cursor", "ai-tools", "ctxray"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "scikit-learn>=1.4",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
ollama = ["requests>=2.31"]
local = ["sentence-transformers>=2.0"]
openai = ["openai>=1.0"]
mcp = ["fastmcp>=2.0"]
chinese = ["jieba>=0.42"]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.0", "pytest-cov>=5.0", "jieba>=0.42"]

[project.scripts]
ctxray = "ctxray.cli:app"

[project.urls]
Homepage = "https://github.com/ctxray/ctxray"
Repository = "https://github.com/ctxray/ctxray"
Issues = "https://github.com/ctxray/ctxray/issues"
Changelog = "https://github.com/ctxray/ctxray/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctxray"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
omit = [
    "src/ctxray/mcp.py",
    "src/ctxray/mcp_main.py",
    "src/ctxray/embeddings/ollama.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["requests", "requests.*"]
ignore_missing_imports = true
follow_imports = "silent"
